Added some functions

--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,4 +1,5 @@
 \doxysection{Class List}
 Here are the classes, structs, unions and interfaces with brief descriptions\+:\begin{DoxyCompactList}
+\item\contentsline{section}{\mbox{\hyperlink{structquadratic_equation}{quadratic\+Equation}} \\*Struct that stores coeffs and answers of quadratic equation }{\pageref{structquadratic_equation}}{}
 \item\contentsline{section}{\mbox{\hyperlink{structsolution}{solution}} \\*Struct that stores solutions }{\pageref{structsolution}}{}
 \end{DoxyCompactList}
