--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -238,6 +238,7 @@
 \chapter{File Index}
 \input{files}
 \chapter{Class Documentation}
+\input{structquadratic_equation}
 \input{structsolution}
 \chapter{File Documentation}
 \input{main_8c}
