--- a/docs/latex/structsolution.tex
+++ b/docs/latex/structsolution.tex
@@ -19,7 +19,7 @@ double \mbox{\hyperlink{structsolution_a227566cab64a702caa7e8928c7da47d3}{x2}}
 \doxysubsection{Detailed Description}
 Struct that stores solutions. 
 
-Definition at line \mbox{\hyperlink{main_8c_source_l00052}{52}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
+Definition at line \mbox{\hyperlink{main_8c_source_l00027}{27}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
 
 
 
@@ -36,11 +36,11 @@ enum with exit codes; in basic cases = number of roots
 
 
 
-Definition at line \mbox{\hyperlink{main_8c_source_l00053}{53}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
+Definition at line \mbox{\hyperlink{main_8c_source_l00028}{28}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
 
 
 
-Referenced by \mbox{\hyperlink{main_8c_source_l00076}{main()}}, and \mbox{\hyperlink{main_8c_source_l00144}{solve\+Quadratic()}}.
+Referenced by \mbox{\hyperlink{main_8c_source_l00170}{print\+Answer()}}, and \mbox{\hyperlink{main_8c_source_l00193}{solve\+Quadratic()}}.
 
 \Hypertarget{structsolution_a4db2109487bdca8eed97d3c6da125e68}\index{solution@{solution}!x1@{x1}}
 \index{x1@{x1}!solution@{solution}}
@@ -54,11 +54,11 @@ first root
 
 
 
-Definition at line \mbox{\hyperlink{main_8c_source_l00054}{54}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
+Definition at line \mbox{\hyperlink{main_8c_source_l00029}{29}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
 
 
 
-Referenced by \mbox{\hyperlink{main_8c_source_l00076}{main()}}, and \mbox{\hyperlink{main_8c_source_l00144}{solve\+Quadratic()}}.
+Referenced by \mbox{\hyperlink{main_8c_source_l00170}{print\+Answer()}}, and \mbox{\hyperlink{main_8c_source_l00193}{solve\+Quadratic()}}.
 
 \Hypertarget{structsolution_a227566cab64a702caa7e8928c7da47d3}\index{solution@{solution}!x2@{x2}}
 \index{x2@{x2}!solution@{solution}}
@@ -72,11 +72,11 @@ second root
 
 
 
-Definition at line \mbox{\hyperlink{main_8c_source_l00055}{55}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
+Definition at line \mbox{\hyperlink{main_8c_source_l00030}{30}} of file \mbox{\hyperlink{main_8c_source}{main.\+c}}.
 
 
 
-Referenced by \mbox{\hyperlink{main_8c_source_l00076}{main()}}, and \mbox{\hyperlink{main_8c_source_l00144}{solve\+Quadratic()}}.
+Referenced by \mbox{\hyperlink{main_8c_source_l00170}{print\+Answer()}}, and \mbox{\hyperlink{main_8c_source_l00193}{solve\+Quadratic()}}.
 
 
 
